framec_tests/language_specific/c/v3_mir/positive/forward_trailing_whitespace.frm
@target c

system S {
    machine:
        $A => $P {
            e() {
                => $^   
            }
        }
        $P { }
}
