framec_tests/language_specific/c/v3_mir/negative/transition_invalid_state_ident.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $1Bad()
            }
        }
}

